[package]
name = "autogui"
version = "0.3.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
license = "MIT"

description = "GUI Automation toolbox for Rust"
repository = "https://github.com/Dentosal/autogui-rs"
readme = "README.md"

build = "build.rs"

[dependencies]
libc = "0.2"
image = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.13.0"
core-foundation = "0.5"
