[package]
name = "autogui"
version = "0.4.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
license = "MIT"

description = "GUI Automation toolbox for Rust"
repository = "https://github.com/Dentosal/autogui-rs"
readme = "README.md"

build = "build.rs"

[dependencies]
libc = "0.2"
image = "0.18"
bitflags = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.13.0"
core-foundation = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
